src/objects/SSI__c.object
<CustomObject>
    <description>SSI: To record each SSI record</description>
    <fields>
        <fullName>Assign_Task__c</fullName>
        <formula>HYPERLINK(&quot;/apex/MassAssignRecallTasks?dealername=&quot;+Encode_Dealer_Name__c    , &quot;Assign Task&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assign Task</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CarModelCheck_Status__c</fullName>
        <label>CarModelCheck Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Valid</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Accept</fullName>
                </value>
                <value>
                    <fullName>Reject</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompanyName__c</fullName>
        <description>Company Name from the sales contract</description>
        <label>CompanyName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractDate__c</fullName>
        <description>The start date for the sales contract.</description>
        <label>ContractDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Created_By_EP_Transaction__c</fullName>
        <label>Created By EP Transaction</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerName__c</fullName>
        <description>Customer Name from the sales contract</description>
        <label>CustomerName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerTitle__c</fullName>
        <description>Customer Title from the sales contract</description>
        <label>CustomerTitle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DealerCheck_Status__c</fullName>
        <label>DealerCheck Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Valid</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Accept</fullName>
                </value>
                <value>
                    <fullName>Reject</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DealerName__c</fullName>
        <description>The dealer name on the sales record</description>
        <label>DealerName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer__c</fullName>
        <description>Sales dealer code in CRM</description>
        <label>Dealer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Encode_Dealer_Name__c</fullName>
        <description>Store URLEncode Dealer Name.
Used in Report HyberLink.</description>
        <label>Encode Dealer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HandoverDate__c</fullName>
        <description>Date of the vehicle-handover to the customer</description>
        <label>HandoverDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HomeMobilePhone__c</fullName>
        <description>Private Phone Number from the sales contract</description>
        <label>HomeMobilePhone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Invalid_Reason__c</fullName>
        <formula>IF(  
ISPICKVAL(DealerCheck_Status__c , &apos;Reject&apos;) , &apos;Illegal Dealer&apos; ,
IF( ISPICKVAL( CarModelCheck_Status__c , &apos;Reject&apos;) , &apos;Car Model Unmatched&apos; , 
IF( ISPICKVAL( Status__c , &apos;All Valid&apos;), &apos;All Valid&apos;, TEXT( Suspect_Reason__c ) 
)
)
)</formula>
        <label>Invalid Reason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InvoiceDate__c</fullName>
        <description>Date for invoice</description>
        <label>InvoiceDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Month__c</fullName>
        <formula>TEXT(YEAR(InvoiceDate__c)) + IF(MONTH(InvoiceDate__c) &lt; 10, &apos;0&apos; + TEXT(MONTH(InvoiceDate__c)), TEXT(MONTH(InvoiceDate__c)))</formula>
        <label>Invoice Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Year__c</fullName>
        <formula>YEAR( InvoiceDate__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mark__c</fullName>
        <label>Mark</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Need_2nd_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <description>sinotrust user greate 2nd survey task</description>
        <label>Need 2nd Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Used__c</fullName>
        <label>New Used</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Newly_Task_Id__c</fullName>
        <description>Store the newly task id , updated by View SSI button on task, used in interaction log &amp; task relationship.</description>
        <label>*Newly Task Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OfficePhone__c</fullName>
        <description>Office Phone Number from the sales contract</description>
        <label>OfficePhone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>OriginalCustomerName__c</fullName>
        <label>OriginalCustomerName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OriginalOfficePhone__c</fullName>
        <label>OriginalOfficePhone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Original_HomeMobilePhone__c</fullName>
        <label>Original HomeMobilePhone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Ownertype__c</fullName>
        <description>Whether the vehicle is private or company owned</description>
        <label>Ownertype</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person__c</fullName>
        <description>The sales person involved in the contract</description>
        <label>Person</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QC_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>QC Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SSI_SourceId__c</fullName>
        <externalId>true</externalId>
        <label>SSI SourceId</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Original</fullName>
                    <default>true</default>
                    <label>Original</label>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>All Valid</fullName>
                </value>
                <value>
                    <fullName>Invalid</fullName>
                </value>
                <value>
                    <fullName>Matched</fullName>
                </value>
                <value>
                    <fullName>Unmatched</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SurveyAvailableDateSpan__c</fullName>
        <description>Calculate Survey available date span, used by 1st call flow, created by Chris 2013-9-22.</description>
        <formula>&quot;(Car month：&quot; + TEXT(YEAR(InvoiceDate__c)) + &quot;-&quot; + TEXT(MONTH(InvoiceDate__c)) + &quot;) Date interval：&quot; + TEXT( DATE( YEAR(InvoiceDate__c), MONTH(InvoiceDate__c), 1) ) + &quot; ~ &quot; + TEXT( TODAY() - 14 )</formula>
        <label>SurveyAvailableDateSpan</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Finished__c</fullName>
        <description>If SSI Task Indicator=&apos;Close&apos;, update Survey Finished field on SSI object.</description>
        <label>Survey Finished</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1st Survey</fullName>
                </value>
                <value>
                    <fullName>2nd Survey</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SuspectCarModel_Review__c</fullName>
        <label>SuspectCarModel Review</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accept</fullName>
                </value>
                <value>
                    <fullName>Reject</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SuspectDealer_Review__c</fullName>
        <label>SuspectDealer Review</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accept</fullName>
                </value>
                <value>
                    <fullName>Reject</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Suspect_Reason__c</fullName>
        <description>Data Quality Check rule</description>
        <label>Suspect Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Time cannot match</fullName>
                </value>
                <value>
                    <fullName>Invalid contact</fullName>
                </value>
                <value>
                    <fullName>Same VIN of current period</fullName>
                </value>
                <value>
                    <fullName>Same contact information of current period</fullName>
                </value>
                <value>
                    <fullName>Government vehicles</fullName>
                </value>
                <value>
                    <fullName>Dealer vehicles &amp; Sub-dealer vehicles</fullName>
                </value>
                <value>
                    <fullName>Same VIN and same contact name</fullName>
                </value>
                <value>
                    <fullName>Same VIN and different contact name</fullName>
                </value>
                <value>
                    <fullName>Same contact and same contact name</fullName>
                </value>
                <value>
                    <fullName>Same contact and different contact name</fullName>
                </value>
                <value>
                    <fullName>Customer Name does not exist</fullName>
                </value>
                <value>
                    <fullName>Dealer vehicles &amp;Sub-dealer vehicles</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Updated_By_EP_Transactions__c</fullName>
        <label>Updated By EP Transactions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VehicleCBUCKD__c</fullName>
        <description>Vehicle manufacture type according to sales contract</description>
        <label>VehicleCBUCKD</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CBU</fullName>
                </value>
                <value>
                    <fullName>CKD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VehicleDesc__c</fullName>
        <description>Vehicle description according to sales contract</description>
        <label>VehicleDesc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VehicleID__c</fullName>
        <description>Vehicle linked to the sale in the system.</description>
        <label>VehicleID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VehicleModel__c</fullName>
        <description>Vehicle model according to sales contract</description>
        <label>VehicleModel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VehicleUSvin__c</fullName>
        <description>Vehicle US VIN according to sales contract</description>
        <label>VehicleUSvin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SSI</label>
    <listViews>
        <fullName>All_Valid_SSI_Record</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>InvoiceDate__c</columns>
        <columns>CustomerName__c</columns>
        <columns>HomeMobilePhone__c</columns>
        <columns>OfficePhone__c</columns>
        <columns>Dealer__c</columns>
        <columns>DealerName__c</columns>
        <columns>VehicleUSvin__c</columns>
        <columns>VehicleDesc__c</columns>
        <columns>VehicleModel__c</columns>
        <columns>VehicleCBUCKD__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>All Valid</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:6</value>
        </filters>
        <label>5.All Valid SSI Record</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Calibrated_SSI</fullName>
        <columns>NAME</columns>
        <columns>CustomerName__c</columns>
        <columns>InvoiceDate__c</columns>
        <columns>HomeMobilePhone__c</columns>
        <columns>OfficePhone__c</columns>
        <columns>DealerName__c</columns>
        <columns>Status__c</columns>
        <columns>VehicleModel__c</columns>
        <columns>VehicleUSvin__c</columns>
        <columns>VehicleDesc__c</columns>
        <columns>VehicleCBUCKD__c</columns>
        <columns>Need_2nd_Survey__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Original,In Process</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_MONTHS:2</value>
        </filters>
        <label>Calibrated SSI</label>
        <language>en_US</language>
        <sharedTo>
            <role>CAC_QC_SV_TM</role>
            <role>SSI_Supervisor</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_SSI</fullName>
        <columns>NAME</columns>
        <columns>CustomerName__c</columns>
        <columns>HomeMobilePhone__c</columns>
        <columns>OfficePhone__c</columns>
        <columns>DealerName__c</columns>
        <columns>Status__c</columns>
        <columns>VehicleModel__c</columns>
        <columns>VehicleUSvin__c</columns>
        <columns>VehicleDesc__c</columns>
        <columns>VehicleCBUCKD__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Matched,Unmatched</value>
        </filters>
        <filters>
            <field>InvoiceDate__c</field>
            <operation>equals</operation>
            <value>LAST_N_MONTHS:2</value>
        </filters>
        <label>My SSI</label>
        <language>en_US</language>
        <sharedTo>
            <role>SSI_CSR</role>
            <role>SSI_Supervisor</role>
            <role>SSI_TL</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Other_Rule_Invalid_SSI</fullName>
        <columns>NAME</columns>
        <columns>Suspect_Reason__c</columns>
        <columns>Status__c</columns>
        <columns>CustomerName__c</columns>
        <columns>HomeMobilePhone__c</columns>
        <columns>OfficePhone__c</columns>
        <columns>DealerName__c</columns>
        <columns>VehicleModel__c</columns>
        <columns>VehicleUSvin__c</columns>
        <columns>VehicleDesc__c</columns>
        <columns>VehicleCBUCKD__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Invalid</value>
        </filters>
        <filters>
            <field>Suspect_Reason__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>4.Other Rule Invalid SSI</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Pending_CarModel</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>CarModelCheck_Status__c</columns>
        <columns>Comments__c</columns>
        <columns>VehicleModel__c</columns>
        <columns>VehicleDesc__c</columns>
        <columns>CustomerName__c</columns>
        <columns>HomeMobilePhone__c</columns>
        <columns>OfficePhone__c</columns>
        <columns>Dealer__c</columns>
        <columns>DealerName__c</columns>
        <columns>VehicleCBUCKD__c</columns>
        <columns>VehicleUSvin__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CarModelCheck_Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <label>3.Pending CarModel</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Pending_Dealer</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>DealerCheck_Status__c</columns>
        <columns>Comments__c</columns>
        <columns>Dealer__c</columns>
        <columns>DealerName__c</columns>
        <columns>CustomerName__c</columns>
        <columns>HomeMobilePhone__c</columns>
        <columns>OfficePhone__c</columns>
        <columns>CarModelCheck_Status__c</columns>
        <columns>VehicleCBUCKD__c</columns>
        <columns>VehicleUSvin__c</columns>
        <columns>VehicleModel__c</columns>
        <columns>VehicleDesc__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DealerCheck_Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <label>2.Pending Dealer</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X1_Original_SSI_Record</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>CustomerName__c</columns>
        <columns>HomeMobilePhone__c</columns>
        <columns>OfficePhone__c</columns>
        <columns>Dealer__c</columns>
        <columns>DealerName__c</columns>
        <columns>VehicleUSvin__c</columns>
        <columns>VehicleDesc__c</columns>
        <columns>VehicleModel__c</columns>
        <columns>VehicleCBUCKD__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>InvoiceDate__c</columns>
        <columns>Invoice_Month__c</columns>
        <columns>New_Used__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Original</value>
        </filters>
        <label>1.Original SSI Record</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SSI-{000000}</displayFormat>
        <label>SSI No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SSI</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>ApprovedSRCannotBeChanged</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
QC_Approved__c == true, 
NOT(ISCHANGED(QC_Approved__c)), 
$Profile.Name != &apos;System Administrator&apos;, 
$Profile.Name != &apos;CAC IT Manager&apos;, 
OR(ISCHANGED(CustomerName__c), ISCHANGED(OriginalCustomerName__c), 
ISCHANGED(CustomerTitle__c),ISCHANGED(OfficePhone__c), 
ISCHANGED(OriginalOfficePhone__c), 
ISCHANGED(HomeMobilePhone__c), 
ISCHANGED(Original_HomeMobilePhone__c), 
ISCHANGED(CompanyName__c)) 
)</errorConditionFormula>
        <errorMessage>QC has been approved. You cannot modify SSI anymore.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Comments_Mandatory_SuspectCarModel</fullName>
        <active>true</active>
        <description>When field SuspectCarModel Review is &apos;Accept&apos;, Field &apos;Comments&apos; can not be blank</description>
        <errorConditionFormula>!ISCHANGED( Newly_Task_Id__c ) &amp;&amp;  
AND(  
ISCHANGED(CarModelCheck_Status__c ), 
ISPICKVAL(CarModelCheck_Status__c ,&apos;Accept&apos;) , 
ISBLANK(Comments__c )
 )</errorConditionFormula>
        <errorDisplayField>Comments__c</errorDisplayField>
        <errorMessage>SuspectCarModel Review is &apos;Accept&apos;, Field &apos;Comments&apos; can not be blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Comments_Mandatory_SuspectDealer_Review</fullName>
        <active>true</active>
        <description>when field SuspectDealer Review is &apos;Accept&apos;, &apos;Comments&apos; fields can not be blank.</description>
        <errorConditionFormula>!ISCHANGED( Newly_Task_Id__c ) &amp;&amp; 
AND(  
ISCHANGED(DealerCheck_Status__c ), 
ISPICKVAL(DealerCheck_Status__c ,&apos;Accept&apos;) , 
ISBLANK(Comments__c )
 )</errorConditionFormula>
        <errorDisplayField>Comments__c</errorDisplayField>
        <errorMessage>&apos;Comments&apos; fields can not be blank when field SuspectDealer Review is &apos;Accept&apos;</errorMessage>
    </validationRules>
</CustomObject>